# automatizacaoSelenium

./: LICENSE  README.md  TODO.md  makefile  pyproject.toml  run.bat  run.sh  teste.py  util.py
automacoes/: cenario1.py  cenario2.py  cenario3.py
classes/: Date.py  Usuario.py
uteis/: exceptionsCadastro.py  exceptionsLogin.py  modulo1.py  moduloConfiguracoes.py  moduloLogin.py  moduloRealizaCompra  utilidadesLogin.py
