[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Automatizacao Selenium"
version = "1.0.0"
description = "Biblioteca de automação com Selenium para testes na tela de login."
readme = "README.md"
authors = [{name = "Gustavo Pimenta Cordeiro", email = "gustavopimenta90@gmail.com"}]
license = {text = "MIT"}
dependencies = ["selenium", "webdriver_manager"]

[project.urls]
"Homepage" = "https://github.com/gnobisP/automatizacaoSelenium"
